# character-dataset

./: README.md  convert.ipynb  leon_process.ipynb  pyproject.toml
flattened_thin_dataset/: dataset_info.csv
flattened_xcrop_dataset/: dataset_info.csv
lines/: config_parser.py  handwritten_generator.ipynb  metadata.yaml  scraper.ipynb
lines/line_generator_v1/: example_individual_config.yml  image_processing.py
lines/line_generator_v2/: config.yml  config_parser.py  image_processing.py  temp.txt  temp2.csv
processed/: metadata.txt
